--- a/welcome.html
+++ b/welcome.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Git Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="worldCupRecords.js"></script>
 </head>
 <body>
-    <h1>My class Hello World!
-        
+    <h1>My class Hello WorldCup!
+
     </h1>
 </body>
 </html>
