--- a/welcome.html
+++ b/welcome.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Git Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="worldCupRecords.js"></script>
+  
 </head>
 <body>
-    <h1>My class Hello WorldCup!
+    <h1>My class Hello WorldCup!</h1>
+    <ul id="allStadiums"></ul>
 
-    </h1>
+    <script src="worldCupRecords.js"></script>
 </body>
 </html>
