--- a/welcome.html
+++ b/welcome.html
@@ -8,9 +8,13 @@
     <script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"></script>
 </head>
 <body>
-    <h1>My class Hello WorldCup!</h1>
-    <ul id="allStadiums"></ul>
+        <h1> WorldCup Statistics</h1>
+        <h4>Enter Team name</h4>
 
+    <input type="text" id="textInput"><button id="myBtn">Search</button>
+    
+    <ul id="allStadiums"></ul>
+     
    <script src="worldCupRecords.js"></script>
 </body>
 </html>
